# x402-tron

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  gasfree.md  gasfree_design.md  package.json  pnpm-workspace.yaml  pyproject.toml
examples/python/client/: main.py  pyproject.toml  requirements.txt
examples/python/server/: .env.example  main.py  pyproject.toml  requirements.txt  start.sh
python/x402/: README.md  pyproject.toml  pytest.ini
python/x402/src/bankofai/x402/: __init__.py  abi.py  config.py  exceptions.py  types.py
python/x402/src/bankofai/x402/address/: __init__.py  converter.py
python/x402/src/bankofai/x402/clients/: __init__.py  policies.py  token_selection.py  x402_client.py  x402_http_client.py
python/x402/src/bankofai/x402/facilitator/: __init__.py  facilitator_client.py  gasfree_facilitator.py  x402_facilitator.py
python/x402/src/bankofai/x402/fastapi/: __init__.py  middleware.py
python/x402/src/bankofai/x402/mechanisms/: __init__.py
python/x402/src/bankofai/x402/mechanisms/_base/: __init__.py  client.py  facilitator.py  server.py
python/x402/src/bankofai/x402/mechanisms/_exact_base/: __init__.py  base.py  types.py
python/x402/src/bankofai/x402/mechanisms/_exact_permit_base/: __init__.py  client.py  facilitator.py  server.py
python/x402/src/bankofai/x402/mechanisms/evm/: __init__.py
python/x402/src/bankofai/x402/mechanisms/tron/: __init__.py
python/x402/src/bankofai/x402/server/: __init__.py  x402_server.py
python/x402/src/bankofai/x402/signers/: __init__.py  utils.py
python/x402/src/bankofai/x402/signers/client/: __init__.py  base.py  evm_signer.py  tron_signer.py
python/x402/src/bankofai/x402/signers/facilitator/: __init__.py  (+3 more)
python/x402/src/bankofai/x402/tokens/: __init__.py  registry.py
python/x402/src/bankofai/x402/utils/: __init__.py  address.py  eip712.py  gasfree.py  payment_id.py  tron_verification.py  tx_verification.py
python/x402/src/tvm_x402/: types.py
python/x402/src/tvm_x402/mechanisms/client/: __init__.py
python/x402/src/tvm_x402/mechanisms/facilitator/: __init__.py  base_upto.py  tron_upto.py
python/x402/src/tvm_x402/mechanisms/server/: __init__.py  base.py
python/x402/src/tvm_x402/signers/client/: __init__.py
python/x402/src/tvm_x402/signers/facilitator/: __init__.py
python/x402/src/tvm_x402/utils/: __init__.py  tx_verification.py
python/x402/src/x402/: __init__.py  abi.py  config.py  encoding.py  exceptions.py  logging_config.py  types.py
python/x402/src/x402/address/: __init__.py  converter.py
python/x402/src/x402/clients/: __init__.py  x402_client.py  x402_http_client.py
python/x402/src/x402/facilitator/: __init__.py  facilitator_client.py  x402_facilitator.py
python/x402/src/x402/fastapi/: __init__.py  middleware.py
python/x402/src/x402/mechanisms/: __init__.py
python/x402/src/x402/mechanisms/client/: __init__.py  base.py  base_upto.py  evm_upto.py  tron_upto.py
python/x402/src/x402/mechanisms/facilitator/: __init__.py  base.py  base_upto.py  evm_upto.py  tron_upto.py
python/x402/src/x402/mechanisms/server/: __init__.py  base.py  base_upto.py  evm_upto.py  tron_upto.py
python/x402/src/x402/server/: __init__.py  x402_server.py
python/x402/src/x402/signers/: __init__.py
python/x402/src/x402/signers/client/: __init__.py  base.py  evm_signer.py  tron_signer.py
python/x402/src/x402/signers/facilitator/: __init__.py  base.py  evm_signer.py  tron_signer.py
python/x402/src/x402/tokens/: __init__.py  registry.py
python/x402/src/x402/utils/: __init__.py  address.py  eip712.py  evm_verification.py  payment_id.py  tron_verification.py  tx_verification.py
python/x402/src/x402_tron/: __init__.py  abi.py  config.py  exceptions.py  logging_config.py  types.py
python/x402/src/x402_tron/address/: __init__.py  converter.py
python/x402/src/x402_tron/clients/: __init__.py  policies.py  token_selection.py  x402_client.py  x402_http_client.py
python/x402/src/x402_tron/facilitator/: __init__.py  facilitator_client.py  gasfree_facilitator.py  x402_facilitator.py
python/x402/src/x402_tron/fastapi/: __init__.py  middleware.py
python/x402/src/x402_tron/mechanisms/: __init__.py
python/x402/src/x402_tron/mechanisms/_exact_base/: __init__.py  base.py
python/x402/src/x402_tron/mechanisms/client/: __init__.py  base.py  base_exact.py  base_upto.py  gasfree.py  tron_upto.py
python/x402/src/x402_tron/mechanisms/evm/: __init__.py
python/x402/src/x402_tron/mechanisms/facilitator/: __init__.py  base.py  base_exact.py  base_upto.py  gasfree.py  tron_exact.py  tron_upto.py
python/x402/src/x402_tron/mechanisms/native_exact/: __init__.py  client.py  facilitator.py  server.py  types.py
python/x402/src/x402_tron/mechanisms/server/: __init__.py  base.py  base_exact.py  base_upto.py  tron_exact.py  tron_upto.py
python/x402/src/x402_tron/mechanisms/tron/: __init__.py
python/x402/src/x402_tron/server/: __init__.py  x402_server.py
python/x402/src/x402_tron/signers/: __init__.py  utils.py
python/x402/src/x402_tron/signers/client/: __init__.py  base.py  evm_signer.py  tron_signer.py
python/x402/src/x402_tron/signers/facilitator/: __init__.py  evm_signer.py  tron_signer.py
python/x402/src/x402_tron/tokens/: __init__.py  registry.py
python/x402/src/x402_tron/utils/: __init__.py  address.py  eip712.py  gasfree.py  tron_client.py  tron_verification.py  tx_verification.py
python/x402/tests/: conftest.py
python/x402/tests/client/: test_client.py  test_evm_payment_permit.py  test_gasfree.py  test_payment_permit.py  test_signers.py
python/x402/tests/common/: test_payment_id.py  test_types.py
python/x402/tests/exact/: test_client.py  test_facilitator.py  test_gasfree_client.py  test_gasfree_facilitator.py  test_server.py  test_tron_client.py  test_tron_facilitator.py  test_tron_server.py  test_types.py
python/x402/tests/facilitator/: test_evm_payment_permit.py  test_evm_signer.py  test_payment_permit.py
python/x402/tests/server/: test_evm_exact.py  test_signature_verification.py
python/x402/tests/utils/: test_gasfree_utils.py
(+102 files in other folders)
