[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x402"
version = "0.1.0"
description = "x402 Payment Protocol SDK for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "x402", email = "dev@x402.io" }
]
keywords = ["x402", "payment", "blockchain", "tron", "evm", "solana"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.optional-dependencies]
tron = ["tronpy>=0.4.0"]
evm = ["web3>=6.0.0"]
fastapi = ["fastapi>=0.100.0"]
flask = ["flask>=2.0.0"]
all = [
    "tronpy>=0.4.0",
    "web3>=6.0.0",
    "fastapi>=0.100.0",
    "flask>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/x402/x402"
Documentation = "https://x402.gitbook.io/x402"
Repository = "https://github.com/x402/x402"

[tool.hatch.build.targets.wheel]
packages = ["src/x402"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
